<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Material3.DayNight"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/app_name"
                android:textSize="36sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24sp"
                android:text="@string/register"
                android:textAlignment="center"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24sp"
                android:text="@string/e_mail"
                android:layout_gravity="start"
                android:layout_marginStart="32dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:endIconMode="clear_text"
                android:layout_marginHorizontal="50dp"
                app:boxStrokeWidth="2dp"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/black"
                android:hint="@string/insira_o_seu_e_mail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textSize="20sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24sp"
                android:text="@string/senha"
                android:layout_gravity="start"
                android:layout_marginStart="32dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:endIconMode="password_toggle"
                android:layout_marginHorizontal="50dp"
                app:boxStrokeWidth="2dp"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/black"
                android:hint="@string/insira_a_sua_senha">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_Senha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="20sp"
                    tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24sp"
                android:text="@string/rsenha"
                android:layout_gravity="start"
                android:layout_marginStart="32dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:endIconMode="password_toggle"
                android:layout_marginHorizontal="50dp"
                app:boxStrokeWidth="2dp"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/black"
                android:hint="@string/insira_a_sua_senha">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_Rsenha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="20sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_cadastrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/realizar_cadastro"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="100sp"
                android:textColor="@drawable/button"
                android:background="@drawable/button"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>